MAINTAINERCLEANFILES=Makefile.in setup.h.in setup.h.in~
noinst_HEADERS=balloc.h hook.h irc_string.h restart.h s_misc.h channel.h hostmask.h listener.h resv.h sprintf_irc.h channel_mode.h inet_misc.h list.h rlimits.h s_serv.h client.h ircd_defs.h memory.h rsa.h stdinc.h common.h ircd_getopt.h m_info.h s_auth.h supported.h dbuf.h ircd.h modules.h s_bsd.h s_user.h defaults.h ircd_handler.h motd.h s_conf.h tools.h event.h ircd_signal.h msg.h send.h userhost.h fdlist.h irc_getaddrinfo.h numeric.h serno.h fileio.h irc_getnameinfo.h packet.h setup.h.in whowas.h handlers.h irc_res.h parse.h s_gline.h hash.h irc_reslib.h patchlevel.h s_log.h s_stats.h
