MAINTAINERCLEANFILES = Makefile.in config.h.in config.h.in~
noinst_HEADERS = balloc.h       \
                 channel.h      \
                 channel_mode.h \
                 client.h       \
                 conf.h         \
                 config.h       \
                 config.h.in    \
                 dbuf.h         \
                 defaults.h     \
                 event.h        \
                 fdlist.h       \
                 hash.h         \
                 hook.h         \
                 hostmask.h     \
                 irc_res.h      \
                 irc_reslib.h   \
                 irc_string.h   \
                 ircd.h         \
                 ircd_defs.h    \
                 ircd_getopt.h  \
                 ircd_signal.h  \
                 list.h         \
                 listener.h     \
                 log.h          \
                 memory.h       \
                 modules.h      \
                 motd.h         \
                 numeric.h      \
                 packet.h       \
                 parse.h        \
                 patchlevel.h   \
                 restart.h      \
                 resv.h         \
                 rsa.h          \
                 s_auth.h       \
                 s_bsd.h        \
                 s_gline.h      \
                 s_misc.h       \
                 s_serv.h       \
                 s_user.h       \
                 send.h         \
                 serno.h        \
                 sprintf_irc.h  \
                 stdinc.h       \
                 supported.h    \
                 userhost.h     \
                 watch.h        \
                 whowas.h
