MAINTAINERCLEANFILES=Makefile.in
dist_pkgdata_DATA=ayb.lang custom.lang ircd-brazilian_pt.lang ircd-bulgarian.lang ircd-croatian.lang  ircd-danish.lang ircd-dutch.lang ircd-french.lang ircd-italian.lang ircd-german.lang ircd-norwegian.lang ircd-polish.lang ircd-russian.lang ircd-spanish.lang ircd-swedish.lang ircd-romanian.lang
